some fixes regarding error responses