@@ -4,11 +4,14 @@ import com.finditnow.jwt.JwtService;
 import com.finditnow.jwt.exceptions.JwtExpiredException;
 import com.finditnow.jwt.exceptions.JwtValidationException;
 import com.finditnow.redis.RedisStore;
+import io.jsonwebtoken.Claims;
+import io.jsonwebtoken.Jws;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
@@ -21,7 +24,7 @@ import java.util.List;
 import java.util.Map;
 
 @Component
-public class JwtAuthFilter extends OncePerRequestFilter { // Ensure 'extends'
+public class JwtAuthFilter extends OncePerRequestFilter {
 
     private final JwtService jwt;
     private final RedisStore redis;
@@ -42,35 +45,48 @@ public class JwtAuthFilter extends OncePerRequestFilter { // Ensure 'extends'
         }
 
         if (redis.isAccessTokenBlacklisted(token)) {
-            sendUnauthorized(response, "token_revoked");
+            SecurityContextHolder.clearContext();
+            filterChain.doFilter(request, response);
             return;
         }
 
         try {
-            Map<String, String> userInfo = jwt.parseTokenToUser(token);
-            String userId = userInfo.get("userId");
-            String profile = userInfo.get("profile");
+            UsernamePasswordAuthenticationToken authentication;
+            Jws<Claims> claims = jwt.parseClaims(token);
+            if("service".equals(claims.getPayload().get("typ", String.class))) {
 
-            List<SimpleGrantedAuthority> authorities = Collections.singletonList(new SimpleGrantedAuthority("ROLE_" + profile.toUpperCase()));
+                List<GrantedAuthority> authorities =
+                        List.of(new SimpleGrantedAuthority("ROLE_SERVICE"));
 
-            UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(userId, null, authorities);
+                authentication = new UsernamePasswordAuthenticationToken(
+                        claims.getPayload().getSubject(),
+                        null,
+                        authorities
+                );
+            }else{
+                String userId = claims.getPayload().get("userId", String.class);
+                String profile = claims.getPayload().get("profile", String.class);
 
-            // 2. Set additional request details
+                List<GrantedAuthority> authorities =
+                        List.of(new SimpleGrantedAuthority("ROLE_" + profile.toUpperCase()));
+
+                authentication = new UsernamePasswordAuthenticationToken(
+                        userId,
+                        null,
+                        authorities
+                );
+                request.setAttribute("userId", userId);
+                request.setAttribute("profile", profile);
+            }
+
             authentication.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
-
             SecurityContextHolder.getContext().setAuthentication(authentication);
 
-            // Optional: Continue using attributes if needed for controllers
-            request.setAttribute("userId", userId);
-            request.setAttribute("profile", profile);
             filterChain.doFilter(request, response);
 
-        } catch (JwtExpiredException e) {
-            SecurityContextHolder.clearContext();
-            sendUnauthorized(response, "token_expired");
         } catch (JwtValidationException e) {
             SecurityContextHolder.clearContext();
-            sendUnauthorized(response, "token_invalid");
+            filterChain.doFilter(request, response);
         }
     }
 
@@ -78,18 +94,5 @@ public class JwtAuthFilter extends OncePerRequestFilter { // Ensure 'extends'
         String header = req.getHeader("Authorization");
         if (header == null || !header.startsWith("Bearer ")) return null;
         return header.substring(7);
-    }
-
-    private void sendUnauthorized(HttpServletResponse response, String message) throws IOException {
-
-        response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
-        response.setContentType("application/json");
-
-        response.getWriter().write("""
-                {
-                  "success": false,
-                  "error": "%s"
-                }
-                """.formatted(message));
     }
 }
